fixed spacing and changed nav bar layout and text

--- a/myStyle.css
+++ b/myStyle.css
@@ -68,7 +68,7 @@ footer {
 }
 
 .container-fluid {
-  max-height: 700px;
+  max-height: 900px;
   margin-top: 60px;
   padding-bottom: 4rem;
   border-bottom: 1px ridge;
